--- a/main.tex
+++ b/main.tex
@@ -1410,6 +1410,28 @@ Figures~\ref{fig:1eNp:dataMCRun1:reco_nu_vtx}-\ref{fig:1eNp:dataMCRun1:pi02} sho
 \caption{\label{fig:1eNp:dataMCRun1:pi02}Data-MC comparison in the Run1 open data after the \npsel preselection.}
 \end{center}
 \end{figure}
+\clearpage
+\newpage
+
+
+\subsection{Nue CC Inclusive}
+This section includes the data-MC comparisons plot for the $\nu_e$ CC inclusive selection which where omitted in the text \ref{fig:pre_vtx}.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth]{NueCCsel/Images/run1/pre_vtx.pdf}
+    \caption{Vertex position of events passing the pre-selection cuts.}
+    \label{fig:pre_vtx}
+\end{figure}
+\clearpage
+\newpage
+
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{NueCCsel/Images/run1/e_cand_dedx.pdf}
+    \caption{d$E$/d$x$ of the electron candidate shower after the pre-selection. The collection plane shows the cleanest e/$\gamma$ separation. The middle panel combines all three planes, leading to a smaller peak at 0 in cases where there are few hits on the collection plane\textcolor{blue}{I don't see the peak at zero}. The plane on the right uses the collection plane but leaves a \SI{1}{\cm} gap, which is beneficial when vertex activity is merged into the electron shower.}
+    \label{fig:e_cand_dedx}
+\end{figure}
 
 \subsection{$\pi^0$ filter}
 \par Figures~\ref{fig:pi0:inputs:shrscore1:RUN1}-\ref{fig:pi0:inputs:dot2:RUN3} show the distribution of reconstructed quantities for inputs to the $\pi^0$ selection. Figures~\ref{fig:pi0:inputs:shrscore1:RUN1}-\ref{fig:pi0:inputs:dot2:RUN1} refer to Run1. Figures~\ref{fig:pi0:inputs:shrscore1:RUN3}-\ref{fig:pi0:inputs:dot2:RUN3} refer to Run3. As a reminder, these comparisons are performed after a 0.7 scaling is applied to CC and NC $\pi^0$ events based on the normalization differences found in the $\pi^0$ mass distributions shown in section~\ref{sec:controls:pi0}.
